Possible fix for issue of opp modal sometimes showing too high on screen.

--- a/client/src/app/game/location/location.component.scss
+++ b/client/src/app/game/location/location.component.scss
@@ -151,9 +151,9 @@
 }
 
 #details {
-	.vert-center {
+/* 	.vert-center {
 		top: 25%;
-	}
+	} */
 	.stars {
 		position: absolute;
 		width: 100%;
